# indicadores_economicos

./: .gitignore  README.md  data_loader.py  pyproject.toml  requirements.txt  run_etl.py
api/: __init__.py  main.py  varejo.py
config/: __init__.py  settings.py
dash/: __init__.py  app.py
etl/: __init__.py  bacen.py  bacen_credito_consumo.py  bacen_credito_imobiliario.py  bacen_ivgr.py  fipezap.py  ibge_demanda.py  ibge_ipca.py  ibge_ipca_grupos.py  ibge_pnad.py  ibge_populacao.py  ibge_sinapi.py  inep_educacao_superior.py  pipeline.py
scripts/: run_api.bat  run_etl_daily.bat  run_etl_daily.sh  test_automation.bat  test_automation.ps1  test_automation.sh
tests/: __init__.py  test_api_dimensions.py  test_etl_basic.py  test_fipezap_parsing.py  test_ipca_grupos_fetch.py  test_sinapi_fetch.py
